# cancerdetection

./: .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  app.py  docker-compose.yml  main.py  pyproject.toml  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  code-quality.yml
docs/: README.md
examples/: basic_usage.py
src/: model.py  preprocess.py
tests/: test_integration.py  test_model.py  test_preprocess.py
